SEPA XML-Version in Einstellungen (#141)